--- a/About Me.html
+++ b/About Me.html
@@ -20,9 +20,11 @@
 
 .icon {
   position: relative;
+  top: 400px;
   height: 50px;
   width: 50px;
   background-size: cover;
+  left: 25%;
   border-radius: 50%;
   animation: wave 4s ease-in-out infinite;
   transition: transform 0.3s ease, background-image 0.3s ease;
@@ -175,7 +177,7 @@ h1{
   position:relative;
   text-align:center;
   padding-top:20px;
-  font-size:40px;
+  font-size:20px;
   color:#f0f0f0;
 }
 #design2{
@@ -201,7 +203,7 @@ h1{
         <img src="/bhaskar.webp" height="100%" width="100%" />
     </div>
     <div id="design">I'm Bhaskar Sah Owner of this website.
-      <p>from Mirchaiya, (Siraha, Nepal) </p>
+      <p>from Mirchaiya (Siraha, Nepal) </p>
       <p>I am glad to interact with all of</p>
       <p>you here and share my excitement.</p>
     </div>
