--- a/sci and tech.html
+++ b/sci and tech.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Science & Technology</title>
+  <link rel="icon" href="/Logo1 2.png" type="image/icon type">
 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;700&display=swap');
