--- a/Contact.html
+++ b/Contact.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=">
   <title>Contact Us Page</title>
+  <link rel="icon" href="/Logo1 2.png" type="image/icon type">
   <script src="https://kit.fontawesome.com/c32adfdcda.js" crossorigin="anonymous"></script>
 
   <style>
