--- a/privacy policy.html
+++ b/privacy policy.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy</title>
+    <link rel="icon" href="/Logo1 2.png" type="image/icon type">
 
     <link rel="stylesheet" href="style.css">
 
