--- a/secure.html
+++ b/secure.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Secure Link Detector</title>
+    <link rel="icon" href="/Logo1 2.png" type="image/icon type">
+    
     <style>
         body {
             font-family: Arial, sans-serif;
