--- a/Cyber Security.html
+++ b/Cyber Security.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TYFDVVX9W2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TYFDVVX9W2');
+</script>
+
   <script src="https://kit.fontawesome.com/c08977e70f.js" crossorigin="anonymous"></script>
+
 <title>CYBER SECURITY</title>
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
@@ -293,6 +307,7 @@ a.footnotegoback:visited {
 }
   </style>
 </head>
+
 
 <body>
 
