--- a/privacy policy.html
+++ b/privacy policy.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
 
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3663278458751008"
+     crossorigin="anonymous"></script>
+
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CBZ0N600E4"></script>
 <script>
