--- a/Cyber Security.html
+++ b/Cyber Security.html
@@ -511,7 +511,7 @@ a.footnotegoback:visited {
             <br>
 
             <h1>
-                
+               In my opinion 
             </h1>
             <p>
                 cybersecurity is an essential aspect of modern digital life, safeguarding information, systems, and networks from a wide array of threats. A proactive and comprehensive approach, incorporating various security measures and continuous education, is vital for protecting against cyber risks. As technology continues to evolve, staying informed and adaptable in the face of new threats will be crucial for individuals and organizations alike. By prioritizing cybersecurity, we can help create a safer digital environment for everyone.
