--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@ body {
         <div class="card">
           <div class="card-banner">
             <p class="category-tag technology">Science and Technology</p>
-            <a href="/sci and tech.html"><img class="banner-img" src='/science-technology.jpg' alt=''></a>
+            <a href="/sci and tech.html"><img class="banner-img" src='/sci and tech.jpg' alt=''></a>
           </div>
           <div class="card-body">
             <h2 class="blog-title">About Science and Technology</h2>
