--- a/secure.html
+++ b/secure.html
@@ -53,6 +53,19 @@
 </head>
 <body>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3663278458751008"
+     crossorigin="anonymous"></script>
+<!-- ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-3663278458751008"
+     data-ad-slot="2324050708"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
     <h1>Secure Link Detector</h1>
     <input type="text" id="urlInput" placeholder="Enter URL here">
     <button onclick="checkSecureLink()">Check Link</button>
