--- a/Cyber Security.html
+++ b/Cyber Security.html
@@ -314,6 +314,19 @@ a.footnotegoback:visited {
 
 <body>
 
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3663278458751008"
+     crossorigin="anonymous"></script>
+<!-- ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-3663278458751008"
+     data-ad-slot="2324050708"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
   <main>
     <div style="text-align: center; font-size: 12px; padding-top: 10px;">©️ Bhaskar Sah <br> October 25, 2024</div>
     <h1 class="sticky">CYBER SECURITY<br><br>
@@ -369,6 +382,18 @@ a.footnotegoback:visited {
         </p>
 
         <br>
+
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3663278458751008"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-3663278458751008"
+     data-ad-slot="7512093938"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
         <h1>Key Components of Cybersecurity</h1>
         <p>
