--- a/sci and tech.html
+++ b/sci and tech.html
@@ -309,6 +309,19 @@ a.footnotegoback:visited {
 
 <body>
 
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3663278458751008"
+     crossorigin="anonymous"></script>
+<!-- ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-3663278458751008"
+     data-ad-slot="2324050708"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
   <main>
     <div style="text-align: center; font-size: 12px; padding-top: 10px;">©️ Bhaskar Sah <br> October 27, 2024</div>
     <h1 class="sticky">CYBER SECURITY<br><br>
@@ -333,6 +346,18 @@ a.footnotegoback:visited {
 <p>The 18th and 19th centuries truly are the golden ages of science-technology synergy, with its apex being the Industrial Revolution. Economies and societies were transformed by innovations like the steam engine, electricity, or mechanized manufacturing. This is also when scientific institutions emerged along with the professionalization of research and development, a phenomenon that led to great innovations in knowledge and technologies.</p>
 
 <br>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3663278458751008"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-3663278458751008"
+     data-ad-slot="7512093938"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <h1>Modern Advances in Science and Technology</h1>
 
