--- a/sci and tech.html
+++ b/sci and tech.html
@@ -309,22 +309,10 @@ a.footnotegoback:visited {
 
 <body>
 
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3663278458751008"
-     crossorigin="anonymous"></script>
-<!-- ad -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-3663278458751008"
-     data-ad-slot="2324050708"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 
   <main>
     <div style="text-align: center; font-size: 12px; padding-top: 10px;">©️ Bhaskar Sah <br> October 27, 2024</div>
-    <h1 class="sticky">CYBER SECURITY<br><br>
+    <h1 class="sticky">Science and Technology<br><br>
       <a class="icon" href="https://www.bhaskarsah.com.np" title="go home"><img src="https://i.postimg.cc/vTHGBZ4z/32bhome.png"></a>
     </h1>
     
@@ -368,6 +356,19 @@ a.footnotegoback:visited {
 <p>In addition, biotechnology has changed the face of medicine. The genomics and molecular biology fields have encountered tremendous gain with the availability of CRISPR gene editing technology for targeted modifications in DNA. This offers the prospects of treating genetic disorders, enhancing agricultural practices and eradicating diseases particularly cancer.</p>
 
 <br>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3663278458751008"
+crossorigin="anonymous"></script>
+<!-- ad -->
+<ins class="adsbygoogle"
+style="display:block"
+data-ad-client="ca-pub-3663278458751008"
+data-ad-slot="2324050708"
+data-ad-format="auto"
+data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <h1></h1>
 
