--- a/sci and tech.html
+++ b/sci and tech.html
@@ -355,8 +355,6 @@ a.footnotegoback:visited {
 
 <p>In addition, biotechnology has changed the face of medicine. The genomics and molecular biology fields have encountered tremendous gain with the availability of CRISPR gene editing technology for targeted modifications in DNA. This offers the prospects of treating genetic disorders, enhancing agricultural practices and eradicating diseases particularly cancer.</p>
 
-<br>
-
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3663278458751008"
 crossorigin="anonymous"></script>
 <!-- ad -->
@@ -370,9 +368,29 @@ data-full-width-responsive="true"></ins>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
-<h1></h1>
+<h1>Role Of Science and Technology in society</h1>
 
+<p>Science and technology are indispensable to the growth of modern society taking into account many aspects including, but not limited to: substinence in industries, behaviour of daily routine life affirming sustanance thoughts for widespread prosperity. Science tells us but a systematic way of explaining the natural universe, such as medicine for health and environmental science in addition to engineering developments which are largely achieved by means. These advances have led to potentially life-saving therapies, better public health and environmental improvements.</p>
 
+<p>In contrast to this is Technology which basically increases the speed at which we do our everyday things, making it easier as well. Whether in terms of communications, work or leisure; technology changes the way we talk to each other and can also make things seemingly more accessible. It sparks economic progress by opening new industry and employment avenues, contributing to productivity.</p>
+
+<p>Additionally, science and technology are crucial for solving large-scale global problems. Agricultural breakthroughs improve food security, and progress in telemedicine allows medical access for those without easier transportation options. Inclusion of both Science and Technology not only contributes to the quality of life but also help answer policy questions for society — solving some grand challenges like climate change, health crisis etc which would be foundation stones towards a sustainable prosperous future.</p>
+
+<br>
+
+<h1>The Future of Science and Technology</h1>
+
+<p>Science and technology will offer nothing short of astonishing possibilities in the future we make. Notable sectors of interest include artificial intelligence (AI), biotechnology, and green technologies. Artificial Intelligence will bring a radical change in industries by Automating processes, Making better decisions and Providing personalized experiences helping make operations more efficient across healthcare, finance and transportation sectors.</p>
+
+<p>Medically and agriculturally, the revolution will progress thanks to biotechnology: Personalized medicine breakthroughs as well as gene editing; sustainable food production advances with simply engineered crops. Inventions which led to CRISPR technology present promise in treating congenital diseases, developing crops resistant to climate change etc.</p>
+
+<p>Furthermore the move, towards energy solutions like wind power is driven by the goal of addressing climate change and supporting environmental preservation. As nations strive to lower carbon emissions advancements in energy storage and intelligent grid systems are expected to be key in the shift, towards an friendly economy.</p>
+
+<p>The rise of technologies underscores the growing significance of concerns, in our society's discourse today and beyond as we grapple with matters concerning privacy rights and security measures while striving for fairness and inclusivity in the access to advancements in science and technology, for everyone's benefit globally in the long run.</p>
+
+<h1>benefit</h1>
+
+<p></p>
 
 </main>
   
