--- a/sci and tech.html
+++ b/sci and tech.html
@@ -388,9 +388,32 @@ data-full-width-responsive="true"></ins>
 
 <p>The rise of technologies underscores the growing significance of concerns, in our society's discourse today and beyond as we grapple with matters concerning privacy rights and security measures while striving for fairness and inclusivity in the access to advancements in science and technology, for everyone's benefit globally in the long run.</p>
 
-<h1>benefit</h1>
+<br>
 
-<p></p>
+<h1>benefit of science amd Technology in future</h1>
+
+<p>Science and Technology’s Developmental Tendencies Further Benefits are expected in the future through the science and technology boom which will affect the diverse dimensions of life. Some of the benefits include:</p>
+
+ <p><b><u> Health Sector Improvements:</u></b> This involves the promotion of health through medical devices and equipment, DNA therapy, and remote monitoring of patients for example through television.</p>
+  
+  <p><b><u>Green House Gases: </u></b>Construction of storage systems for unutilized energy resources such as sunlight, wind, or bio energy will lessen the burden of using the readily available fossil fuels and hence combat climate change.</p>
+  
+<p><b><u> Agricultural Sector Improvements:</u></b> Reducing environmental burden bioengineering and the use of modern farming such as precision farming will increase food supply and make crops more resistant to global climate change.</p>
+  
+<p><b><u>Global Information Sharing:</u></b> Communication technology will shorten distances, allow teleworking, and sharing of information across the globe almost instantaneously.</p>
+
+  <p>  
+   <b><u> Automated Intelligence and Machine Learning:</u></b> Regulating authorities can engage in business and create opportunities thanks to technology where they can less suffer from operational risks while cutting down on costs associated with human errors. In manufacturing, resources can be used more efficiently in completing the production cycle through automation which reduces labor costs.</p>
+  
+<p> <b><u> Smart Urbanism And Smart Infrastructure:</u></b> Development of urban areas, especially in the developing countries in the infustructure and other services provision, would also help reduce the burden and enhance the quality of city life.</p>
+  
+  <p><b><u>Environmental Monitoring:</u></b> Ground sensor, unmanned aerial vehicle, and satellite cluster will be used to collect information useful in creating a dynamic baseline for assessing environmental changes, understanding changes in biodiversity, and managing natural resource use.</p>
+  
+  <p><b><u>Space Expansion:</u></b> Space age and development control technology in space industry have great benefits that will take to earth and those that will improve life on earth like new inventions, space communication, global warming and other issues.</p>
+  
+ <p> <b><u>Education Technologies:</u></b> Technology and the internet in particular helps with education especially with distant learning/instructor settings, gamified learning environments, and tailored education to students allowing everyone with access to information and knowledge.</p>
+  
+  <p><b><u>Economic Growth: </u></b>Technology improvements also help in promoting eco-friendly investments.</p>
 
 </main>
   
