--- a/sci and tech.html
+++ b/sci and tech.html
@@ -390,7 +390,7 @@ data-full-width-responsive="true"></ins>
 
 <br>
 
-<h1>benefit of science amd Technology in future</h1>
+<h1>benefit of science and Technology in future</h1>
 
 <p>Science and Technology’s Developmental Tendencies Further Benefits are expected in the future through the science and technology boom which will affect the diverse dimensions of life. Some of the benefits include:</p>
 
