--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@ body {
   background: white;
   border-radius: 0.5rem;
   position: relative;
-  width: 350px;
+  width: 400px;
   margin: 1rem;
   transition: 250ms all ease-in-out;
   cursor: pointer;
@@ -547,7 +547,7 @@ body {
 .banner-img {
   position: absolute;
   object-fit: cover;
-  height: 14rem;
+  height: 20rem;
   width: 100%;
 }
 
@@ -578,7 +578,7 @@ body {
 
 
 .card-body {
-  margin: 15rem 1rem 1rem 1rem;
+  margin: 22rem 1.5rem 1.5rem 1.5rem;
 }
 
 .blog-hashtag {
@@ -801,6 +801,28 @@ body {
         </div>
       </div>
   </div>
+
+  <div class="wrapper">
+    <div class="card">
+      <div class="card-banner">
+        <p class="category-tag popular">Dark Web</p>
+        <a href="/Cyber Security.html"><img class="banner-img" src='/DARK WEB.png' alt=''></a>
+      </div>
+      <div class="card-body">
+        <h2 class="blog-title">Dark Web</h2>
+        <p class="blog-description"></p>
+        <p></p>
+        
+
+        <div class="card-profile">
+          <a href="/Cyber Security.html"></a><img class="profile-img" src='/bhaskar.webp' alt='' >
+          <div class="card-profile-info">
+            <h3 class="profile-name">Bhaskar Sah</h3>
+            <p class="profile-followers">October 30, 2024</p>
+          </div>
+        </div>
+      </div>  
+    </div>
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3663278458751008"
   crossorigin="anonymous"></script>
