--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@ body {
       <a href="/About Me.html"><i class="fa-regular fa-user"></i><span><b>Abour Me</b></i></span></a>        
       <a href="/Disclaimer.html"><i class="fa-solid fa-d"></i><span><b>Disclaimer</b></i></span></a>
       <a href="/privacy policy.html"><i class="fa-brands fa-pied-piper-pp"></i><span><b>Privacy Policy</b></i></span></a>
-      <a href="/Contact.html"><i class="fa-solid fa-c"></i><span><b>Contact</b></i></span></a> 
+      <a href="/contact.html"><i class="fa-solid fa-c"></i><span><b>Contact</b></i></span></a> 
       
       <a href=""><i class="fa-brands fa-facebook"></i></a>
       <a href=""><i class="fa-brands fa-instagram"></i></a>
