--- a/sci and tech.html
+++ b/sci and tech.html
@@ -418,7 +418,7 @@ data-full-width-responsive="true"></ins>
 </main>
   
 <footer><h4>For Any Question Contact Me</h4>
-    <a href="/Contact.html">Contact me</a>
+    <a href="/contact.html">Contact me</a>
     <div class="foottext">
   <ol>
   
