--- a/Cyber Security.html
+++ b/Cyber Security.html
@@ -316,14 +316,14 @@ a.footnotegoback:visited {
 
   <main>
     <div style="text-align: center; font-size: 12px; padding-top: 10px;">©️ Bhaskar Sah <br> October 25, 2024</div>
-    <h1 class="sticky">CYBER SECURITY<br><br>
+    <h1 class="sticky">What is cyber security? Landscape of Cyber Threats, Key Components,Future of Cybersecurity, Incident Response and Recovery,Education and Awareness<br><br>
       <a class="icon" href="https://www.bhaskarsah.com.np" title="go home"><img src="https://i.postimg.cc/vTHGBZ4z/32bhome.png"></a>
     </h1>
     
     <div class="warn" style="text-align: center; font-size: 18px;"></div>
 <div class="trigger"></div>
     
-    <h1>Understanding Cybersecurity</h1>
+    <h1>What is Cybersecurity</h1>
 
     <p>Cyber security is a field which protects computer systems, networks and data from the theft or damage done to hardware, software. In a world where all things personal, financial and business-related are stored online or on the internet somewhere safe deep within our companies firewalls importance of cybersecurity cannot be understated. There are a wide variety of cyber threats, from the simple phishing scam to targeted attacks by state sponsored hackers and therefore there is a need for individuals as well as organizations to ensure they take security seriously.</p>
 
