--- a/sci and tech.html
+++ b/sci and tech.html
@@ -312,14 +312,14 @@ a.footnotegoback:visited {
 
   <main>
     <div style="text-align: center; font-size: 12px; padding-top: 10px;">©️ Bhaskar Sah <br> October 27, 2024</div>
-    <h1 class="sticky">Science and Technology<br><br>
+    <h1 class="sticky">Science & Technology, benefit of science and Technology in future<br><br>
       <a class="icon" href="https://www.bhaskarsah.com.np" title="go home"><img src="https://i.postimg.cc/vTHGBZ4z/32bhome.png"></a>
     </h1>
     
     <div class="warn" style="text-align: center; font-size: 18px;"></div>
 <div class="trigger"></div>
 
-<h1>Science and Technology</h1>
+<h1>What is Science & Technology</h1>
 
 <p>Technology and science are two intertwined subjects which not only defines our understanding towards the world but also enables certain applications. We think of science as the observation, experimentation and reasoning about things that happen in nature. It involves the study of physics, chemistry, biology and earth sciences. Each of those practices provides an exclusive perspective leading to our knowledge about the usual legal guidelines as well. Physics studies the rules of how matter and energy interact, while biology takes an in-depth look at life from cellular functions to habitats.</p>
 
