--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
+    <script type="application/ld+json">
+      {
+        "Context" : "https://bhaskarsah.com.np"
+        "type" : "Website"
+        "name" : "BSW"
+        "url" : "https://bhaskarsah.com.np/"
+      }
+    </script>
+
     <!-- title -->
     <title>BSW</title>
     <link rel="icon" href="/Logo1 2.png" type="image/icon type">
