--- a/Cyber Security.html
+++ b/Cyber Security.html
@@ -73,7 +73,7 @@ h1 {
   text-align: center;
   font-family: "Averia Serif Libre", Garamond, serif;
   text-transform: uppercase;
-  font-size: 30px;
+  font-size: 25px;
 }
 
 h1.sticky {
@@ -316,7 +316,7 @@ a.footnotegoback:visited {
 
   <main>
     <div style="text-align: center; font-size: 12px; padding-top: 10px;">©️ Bhaskar Sah <br> October 25, 2024</div>
-    <h1 class="sticky">What is cyber security? Landscape of Cyber Threats, Key Components,Future of Cybersecurity, Incident Response and Recovery,Education and Awareness<br><br>
+    <h1 class="sticky">What is cyber security? Threats, Key Components,Future of Cybersecurity, Incident Response & Recovery,Education and Awareness<br><br>
       <a class="icon" href="https://www.bhaskarsah.com.np" title="go home"><img src="https://i.postimg.cc/vTHGBZ4z/32bhome.png"></a>
     </h1>
     
