--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@ body {
         
 
         <div class="card-profile">
-          <a href="/Cyber Security.html"></a><img class="profile-img" src='/bhaskar.webp' alt='' >
+          <a href="/Darkweb.html"></a><img class="profile-img" src='/bhaskar.webp' alt='' >
           <div class="card-profile-info">
             <h3 class="profile-name">Bhaskar Sah</h3>
             <p class="profile-followers">October 30, 2024</p>
