--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@ body {
 }
 
 .category-tag {
-  font-size: 0.8rem;
+  font-size: 1.3rem;
   font-weight: bold;
   color: white;
   background: yellowgreen;
@@ -815,7 +815,7 @@ body {
     <div class="card">
       <div class="card-banner">
         <p class="category-tag popular">Dark Web</p>
-        <a href="/Cyber Security.html"><img class="banner-img" src='/DARK WEB.png' alt=''></a>
+        <a href="/Darkweb.html"><img class="banner-img" src='/Dark Web.png' alt=''></a>
       </div>
       <div class="card-body">
         <h2 class="blog-title">Dark Web</h2>
