--- a/About Me.html
+++ b/About Me.html
@@ -18,7 +18,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>About Author</title>
     <link rel="stylesheet" href="style.css">
 
     <style>
