--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script type="application/ld+json">
       {
         "Context" : "https://bhaskarsah.com.np"
-        "type" : "Website"
+        "type" : "WebSite"
         "name" : "BSW"
         "url" : "https://bhaskarsah.com.np/"
       }
