--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <script type="application/ld+json">
       {
-        "Context" : "https://bhaskarsah.com.np"
+        "Context" : "https://bhaskarsah.com.np/"
         "@type" : "WebSite"
         "name" : "BSW"
         "url" : "https://bhaskarsah.com.np/"
@@ -820,7 +820,7 @@ body {
       <div class="card-body">
         <h2 class="blog-title">Dark Web</h2>
         <p class="blog-description"></p>
-        <p></p>
+        <p>Article might be 1 of possibly hundreds of many that currently appears in people's mind whenever you talk about a term Dark Web, something like illegal activities, marketplace, a safe place for hackers, and etc.</p>
         
 
         <div class="card-profile">
