--- a/Darkweb.html
+++ b/Darkweb.html
@@ -312,7 +312,7 @@ a.footnotegoback:visited {
 
   <main>
     <div style="text-align: center; font-size: 12px; padding-top: 10px;">©️ Bhaskar Sah <br> October 27, 2024</div>
-    <h1 class="sticky">The Dark Web 101: What You Need to Know<br><br>
+    <h1 class="sticky">The Dark Web 101: You Need to Know<br><br>
       <a class="icon" href="https://www.bhaskarsah.com.np" title="go home"><img src="https://i.postimg.cc/vTHGBZ4z/32bhome.png"></a>
     </h1>
     
