--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@ body {
             <a href="/Cyber Security.html"><img class="banner-img" src='/Cyber security.jpeg' alt=''></a>
           </div>
           <div class="card-body">
-            <h2 class="blog-title">Cyber Security</h2>
+            <h2 class="blog-title">What is Cyber Security?</h2>
             <p class="blog-description"></p>
             <p>Cyber security is a field which protects computer systems, networks and data from the theft or damage done to hardware, software.</p>
             
