--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@ body {
         <a href="/Darkweb.html"><img class="banner-img" src='/Dark Web.png' alt=''></a>
       </div>
       <div class="card-body">
-        <h2 class="blog-title">he Dark Web 101: You Need to Know </h2>
+        <h2 class="blog-title">The Dark Web 101: You Need to Know </h2>
         <p class="blog-description"></p>
         
 
