--- a/Darkweb.html
+++ b/Darkweb.html
@@ -311,7 +311,7 @@ a.footnotegoback:visited {
 
 
   <main>
-    <div style="text-align: center; font-size: 12px; padding-top: 10px;">©️ Bhaskar Sah <br> October 27, 2024</div>
+    <div style="text-align: center; font-size: 12px; padding-top: 10px;">©️ Bhaskar Sah <br> November 01, 2024</div>
     <h1 class="sticky">The Dark Web 101: You Need to Know<br><br>
       <a class="icon" href="https://www.bhaskarsah.com.np" title="go home"><img src="https://i.postimg.cc/vTHGBZ4z/32bhome.png"></a>
     </h1>
@@ -367,7 +367,19 @@ a.footnotegoback:visited {
   </li>
 
   <br>
-  <br>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3663278458751008"
+crossorigin="anonymous"></script>
+<!-- ad -->
+<ins class="adsbygoogle"
+style="display:block"
+data-ad-client="ca-pub-3663278458751008"
+data-ad-slot="2324050708"
+data-ad-format="auto"
+data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
    </p>
 
@@ -480,7 +492,19 @@ a.footnotegoback:visited {
     <p>There are many sellers on the dark web that are not trustworthy. Users may lose the money they paid to scams, where products or services were delivered late or never.</p>
 
     <br>
-    <br>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3663278458751008"
+crossorigin="anonymous"></script>
+<!-- ad -->
+<ins class="adsbygoogle"
+style="display:block"
+data-ad-client="ca-pub-3663278458751008"
+data-ad-slot="2324050708"
+data-ad-format="auto"
+data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
     <h1>The function of law enforcement</h1>
 
