--- a/Disclaimer.html
+++ b/Disclaimer.html
@@ -243,7 +243,7 @@ li {
 <p><a href="#tableofcontents">Back to table of contents</a></p><h2 id="personal">5 Personal Responsibility</h2><p>You acknowledge You are using Our Website voluntarily and that any choices, actions and results now and in the future are solely Your responsibility.</p>
 <p>We will not be liable to You or any other party for any decision made or action taken in reliance on the information given in the Website.</p>
 
-<p><a href="#tableofcontents">Back to table of contents</a></p><h2 id="contact">6 Contact Us</h2><p>If You require any more information or have any questions about Our Website's disclaimer, please feel free to contact Us by our <a href="https://www.bhaskarsah.com.np/contact.html/">contact page</a> or  by email at&nbsp;<a href="mailto:bsw554@gmail.com">bsw554@gmail.com</a>.</p>
+<p><a href="#tableofcontents">Back to table of contents</a></p><h2 id="contact">6 Contact Us</h2><p>If You require any more information or have any questions about Our Website's disclaimer, please feel free to contact Us by our <a href="/contact.html">contact page</a> or  by email at&nbsp;<a href="mailto:bsw554@gmail.com">bsw554@gmail.com</a>.</p>
 
 <div class="footer">
     <p><a href="#tableofcontents">Back to table of contents</a></p><h2 id="copyright">7 Copyright Information</h2>COPYRIGHT 2024 BHASKAR SAH. ALL RIGHTS RESERVED.
