--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <script type="application/ld+json">
       {
-        "@context" : "https://bhaskarsah.com.np",
+        "@context" : "https://schema.org",
         "@type" : "WebSite",
         "name" : "BSW,
         "alternateName" : "BSW",
