--- a/index.html
+++ b/index.html
@@ -750,14 +750,12 @@ body {
       <a href="#"><i class="fa-solid fa-tachograph-digital"></i><span><i><b>Generator &nbsp; &nbsp;<i class="fa-solid fa-caret-down"></i></b></i></span></a>
         
               <ul class="dropdown">
+                <li><a href="/password.html"><span><b>Password Generator</b></span></a></li>
+                <li><a href="/creditcard.html"><span><b>Credit Card Checker</b></span></a></li>
                 <li><a href=""><span><b>Random Address Generator</b></span></a></li>
-                <li><a href=""><span><b>Password Generator</b></span></a></li>
-                <li><a href=""><span><b>Fake Name Generator</b></span></a></li>
-                <li><a href=""><span><b>Credit Card Generator</b></span></a></li>
               </ul>
             
               <br>
-              <br>   
 
       <a href="/About Me.html"><i class="fa-regular fa-user"></i><span><b>Abour Me</b></i></span></a>        
       <a href="/Disclaimer.html"><i class="fa-solid fa-d"></i><span><b>Disclaimer</b></i></span></a>
