--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         "@context" : "https://schema.org",
         "@type" : "WebSite",
         "name" : "BSW,
-        "url" : "https://bhaskarsah.com.np/",
+        "url" : "https://bhaskarsah.com.np/"
         "logo": "https://www.bhaskarsah.com.np/Logo1 2.png"
         "potentialAction": {
           "@type": "SearchAction",
@@ -837,6 +837,27 @@ body {
         </div>
       </div>  
     </div>
+
+    <div class="wrapper">
+      <div class="card">
+        <div class="card-banner">
+          <p class="category-tag popular">IT Information</p>
+          <a href="/IT.html"><img class="banner-img" src='/IT.jpg' alt=''></a>
+        </div>
+        <div class="card-body"> 
+          <a href="/IT.html"><h2 class="blog-title">What is IT? IT Education, benefits</h2></a>
+          <p class="blog-description"></p>
+          
+  
+          <div class="card-profile">
+            <a href="/IT.html"></a><img class="profile-img" src='/bhaskar.webp' alt='' >
+            <div class="card-profile-info">
+              <h3 class="profile-name">Bhaskar Sah</h3>
+              <p class="profile-followers">November 06, 2024</p>
+            </div>
+          </div>
+        </div>  
+      </div>
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3663278458751008"
   crossorigin="anonymous"></script>
