--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         "@context" : "https://schema.org",
         "@type" : "WebSite",
         "name" : "BSW,
-        "url" : "https://bhaskarsah.com.np/"
+        "url" : "https://bhaskarsah.com.np/",
         "logo": "https://www.bhaskarsah.com.np/Logo1 2.png"
         "potentialAction": {
           "@type": "SearchAction",
