--- a/IT.html
+++ b/IT.html
@@ -14,7 +14,7 @@
             font-family: 'Poppins', sans-serif;
         }
         body {
-            background: url("/Dark\ Web.png");
+            background: url("/IT.jpg");
             background-size: cover;
             margin: 0;
             height: 100%;
@@ -97,7 +97,7 @@
 
 document.addEventListener('DOMContentLoaded', () => {
     // Unix timestamp (in seconds) to count down to
-    var toDayFromNow = (new Date("November 4, 2024 23:59:59").getTime() / 1000) + (3600 / 60 / 60 / 24) - 1;
+    var toDayFromNow = (new Date("November 8, 2024 23:59:59").getTime() / 1000) + (3600 / 60 / 60 / 24) - 1;
     // Set Up FlipDown
     var flipdown = new FlipDown(toDayFromNow)
 
