--- a/Cyber Security.html
+++ b/Cyber Security.html
@@ -17,7 +17,7 @@
 
   <script src="https://kit.fontawesome.com/c08977e70f.js" crossorigin="anonymous"></script>
 
-<title>CYBER SECURITY</title>
+<title>What is cyber security? Threats, Key Components,Future of Cybersecurity, Incident Response & Recovery,Education and Awareness - BSW</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
