--- a/sci and tech.html
+++ b/sci and tech.html
@@ -18,7 +18,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Science & Technology</title>
+  <title>What is Science & Technology, benefit of science and Technology in future - BSW</title>
   <link rel="icon" href="/Logo1 2.png" type="image/icon type">
 
   <style>
