--- a/Darkweb.html
+++ b/Darkweb.html
@@ -18,7 +18,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dark Web</title>
+  <title>The Dark Web 101: You Need to Know - BSW</title>
   <link rel="icon" href="/Logo1 2.png" type="image/icon type">
 
   <style>
