--- a/IT.html
+++ b/IT.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dark Web</title>
+    <title>IT</title>
     <link rel="icon" href="/Logo1 2.png" type="image/icon type">
 
     <style>
