--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         "@context" : "https://schema.org",
         "@type" : "WebSite",
         "name" : "BSW,
-        "url" : "https://bhaskarsah.com.np/",
-        "logo": "https://www.bhaskarsah.com.np/Logo1 2.png"
+        {"url" : "https://bhaskarsah.com.np/",
+        "logo": "https://www.bhaskarsah.com.np/Logo1 2.png"}
         "potentialAction": {
           "@type": "SearchAction",
           "target": {
@@ -757,7 +757,7 @@ body {
             
               <br>
 
-      <a href="/About Me.html"><i class="fa-regular fa-user"></i><span><b>Abour Me</b></i></span></a>        
+      <a href="/About Me.html"><i class="fa-regular fa-user"></i><span><b>Abour Author</b></i></span></a>        
       <a href="/Disclaimer.html"><i class="fa-solid fa-d"></i><span><b>Disclaimer</b></i></span></a>
       <a href="/privacy policy.html"><i class="fa-brands fa-pied-piper-pp"></i><span><b>Privacy Policy</b></i></span></a>
       <a href="/contact.html"><i class="fa-solid fa-c"></i><span><b>Contact</b></i></span></a> 
