--- a/IT.html
+++ b/IT.html
@@ -14,7 +14,7 @@
             font-family: 'Poppins', sans-serif;
         }
         body {
-            background: url("/IT.jpg");
+            background: url("/IT\ 1.jpg");
             background-size: cover;
             margin: 0;
             height: 100%;
