--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@ body {
       <div class="card">
         <div class="card-banner">
           <p class="category-tag popular">IT Information</p>
-          <a href="/IT.html"><img class="banner-img" src='/IT.jpg' alt=''></a>
+          <a href="/IT.html"><img class="banner-img" src='/IT 1.jpg' alt=''></a>
         </div>
         <div class="card-body"> 
           <a href="/IT.html"><h2 class="blog-title">What is IT? IT Education, benefits</h2></a>
