--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@ body {
             <a href="/IT.html"></a><img class="profile-img" src='/bhaskar.webp' alt='' >
             <div class="card-profile-info">
               <h3 class="profile-name">Bhaskar Sah</h3>
-              <p class="profile-followers">November 06, 2024</p>
+              <p class="profile-followers"></p>
             </div>
           </div>
         </div>  
